# shopping-list-interpreter

./: .env_example  .gitignore  README.md  test_calls.rest
app/: pyproject.toml
app/app/: server.py
